# DeepCPP

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  USAGE_GUIDE.md  benchmark.cpp  comprehensive_benchmark_app.cpp  create_test_model.py  custom_training_demo.cpp  demo_app.cpp  demo_real_capabilities.cpp  export_models.py  large_model_test.py  simple_component_benchmark.cpp  simple_export.py  test_long_sequences.cpp  test_real_capabilities.cpp  test_simple.py
models/: README.md  transformer.json
src/: custom_ops.cc  custom_ops.h  main.cpp
src/benchmarks/: CMakeLists.txt  comprehensive_benchmark.cpp  comprehensive_benchmark.h
src/core/: CMakeLists.txt
src/core/memory/: memory_pool.cpp  memory_pool.h
src/core/tensor/: tensor.cpp  tensor.h
src/inference/: CMakeLists.txt
src/integration/: CMakeLists.txt  onnx_integration.cpp  onnx_integration.h
src/kernels/: ssm_scan.cpp
src/models/: CMakeLists.txt
src/models/mamba/: mamba_block.h
src/operators/: CMakeLists.txt
src/operators/activations/: geglu.cpp  geglu.h  gelu.cpp  gelu.h  mish.cpp  mish.h  swish.cpp  swish.h
src/operators/attention/: flash_attention.cpp  flash_attention.h  linear_attention.cpp  linear_attention.h  multi_query_attention.cpp  multi_query_attention.h  sparse_attention.cpp  sparse_attention.h
src/operators/models/: mixture_of_experts.cpp  mixture_of_experts.h  ssm.cpp  ssm.h  transformer_blocks.cpp  transformer_blocks.h
src/operators/normalization/: batch_norm.cpp  batch_norm.h  group_norm.cpp  group_norm.h  layer_norm.cpp  layer_norm.h  rms_norm.cpp  rms_norm.h
src/operators/performance/: kernel_fusion.cpp  kernel_fusion.h  memory_optimization.cpp  memory_optimization.h  simd_kernels.cpp  simd_kernels.h
src/training/: CMakeLists.txt  custom_trainer.cpp  custom_trainer.h
src/utils/: CMakeLists.txt
